# path-loader

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
path_loader/: __init__.py  auto_loader.py  loader.py
