[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "path-loader"
version = "0.1.0"
description = "自動從配置檔載入 Python 路徑到 sys.path"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [{ name = "Pyan-X" }]
keywords = ["path", "sys.path", "pythonpath", "auto-load"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/Pyan-X/path-loader"
Repository = "https://github.com/Pyan-X/path-loader"

[tool.setuptools]
packages = ["path_loader"]

[tool.setuptools.package-data]
path_loader = ["*.pth"]
